package common;

public interface Program {
    String getName();
    void run(String input);
}
